app/src/main/java/com/example/footballapiapp/Constants.kt
package com.example.footballapiapp

const val TEAM = "team"
const val SEASON = "season"
const val GLOBAL_LINK = "GLOBAL_LINK"
const val GLOBAL_UID = "GLOBAL_UID"
const val GLOBAL_REG = "GLOBAL_REG"
const val GLOBAL_DEP = "GLOBAL_DEP"

//  link
//  urlLiveData.postValue("http://46.161.53.135/rcwsmW")
//  error
//  urlLiveData.postValue("http://46.161.53.135/QMddJ7")
